--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-为xv6添加新的系统调用
+1. 追踪多级页表，并根据页表标志信息打印页表
+2. 为xv6添加新的系统调用：定时器中断，并在内核中执行中断处理函数。 
+    需要保存两次现场：用户态->内核态，保护用户现场（保存在trapframe）
+                    内核态调用用户态函数
