--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-1. 追踪多级页表，并根据页表标志信息打印页表
+1. 追踪并打印出每一次函数调用的返回地址，便于调试。（调用者调用函数前，会将返回地址，自己的栈指针压入栈中。）
 2. 为xv6添加新的系统调用：定时器中断，并在内核中执行中断处理函数。 
     需要保存两次现场：用户态->内核态，保护用户现场（保存在trapframe）
                     内核态调用用户态函数
