--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 在系统调用 sys_sbrk 中，仅分配虚拟内存地址，而不创建物理内存 及 映射，标志位都为 0
 在第一次使用惰性分配内存时，创建物理内存(kmalloc)，并添加映射 (uvmmap)
 在回收内存、fork时要注意，不要将惰性分配的内存给回收了，因为未创建物理内存的惰性分配内存标志位为 0
-当使用到惰性分配的va时，会触发缺页中断，异常号为 13/15，在 trap.c/usertrap 中，需要根据缺页异常号完成
+当使用到惰性分配的va时，会触发缺页异常，异常号为 13/15，在 trap.c/usertrap 中，需要根据缺页异常号完成
 物理内存创建、映射
 同时，在read/write时，需要在内核/用户区拷贝内存数据，要注意，如果是惰性分配的内存，根据页表
 查找到的 pa=0，此时需要完成物理内存的创建 并 映射。
