--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 lab1 Uthread: switching between threads
 实现用户级线程切换
-保存、恢复被调用者寄存器
-通过修改ra寄存器实现返回地址的改变
+每个线程控制块都有 栈、状态、线程上下文(CPU被调用者寄存器)
+在线程切换时，需要保存、恢复线程上下文，即被调用者寄存器(ra, sp等)
+在switch中，通过修改ra寄存器实现返回地址的改变，即pc指向下一个用户线程的代码位置
